stuck on Btn jquery syntax. Unable to resolve problem moving to readme.md for turn in

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@ div {
     background-color: rgba(145, 91, 170, 0.637);
     ;
     width: 600px;
+    right: 400px;
 }
 img{
     margin: 20px,auto;
